--- a/resources/main.fxml
+++ b/resources/main.fxml
@@ -73,7 +73,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="btnDevide" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnDevideClick" text="/" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <Button fx:id="btnDivide" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#btnDivideClick" text="/" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <GridPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </GridPane.margin>
